<resources>
    <string name="app_name">GUI_Dang nhap</string>
    <string name="app_name_2">Widget</string>
    <string name="header">Đăng nhập chương trình ^.^</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="header2">Chương trình tính toán</string>
    <string name="title">Vui lòng nhập đầy đủ thông tin</string>
    <string name="option">Chọn phép tính</string>
    <string name="header_bai3">Chương trình đăng ký tham gia kết bạn</string>

    <string-array name="list_option">
        <item></item>
        <item>Cộng</item>
        <item>Trừ</item>
        <item>Nhân</item>
        <item>Chia</item>
    </string-array>
    
    <string-array name="list_marital_status">
        <item></item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Engaged</item>
    </string-array>

    <string-array name="list_sex">
        <item></item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

</resources>
