<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/shape"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView1"
            style="@style/style_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:background="@drawable/shape_color_organe"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vui lòng nhập đầy đủ thông tin"
            style="@style/style_text"
            android:textSize="10dp"
            android:textAlignment="textStart"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:columnCount="2"
            android:rowCount="2">
            <TextView
                android:id="@+id/textView_1"
                style="@style/style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/username" />
            <EditText
                android:id="@+id/user"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_edit_text" />
            <TextView
                android:id="@+id/textView_2"
                style="@style/style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/pass" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/shape_edit_text" />
        </GridLayout>
        <TableLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp">
            <TableRow android:gravity="end">
                <Button
                    android:id="@+id/btnDangNhap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/shape_color_organe"
                    android:text="Đăng nhập" />
                <Button
                    android:id="@+id/btnThoat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_color_organe"
                    android:text="Thoát" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>